@@ -99,6 +99,11 @@ def fetcher_init(d):
         pd.delDomain("BB_URI_HEADREVS")
     else:
         bb.msg.fatal(bb.msg.domain.Fetcher, "Invalid SRCREV cache policy of: %s" % srcrev_policy)
+
+    for m in methods:
+        if hasattr(m, "init"):
+            m.init(d)
+
     # Make sure our domains exist
     pd.addDomain("BB_URI_HEADREVS")
     pd.addDomain("BB_URI_LOCALCOUNT")
@@ -147,14 +152,16 @@ def init(urls, d, setup = True):
     urldata_cache[fn] = urldata
     return urldata
 
-def go(d):
+def go(d, urls = None):
     """
     Fetch all urls
     init must have previously been called
     """
-    urldata = init([], d, True)
+    if not urls:
+        urls = d.getVar("SRC_URI", 1).split()
+    urldata = init(urls, d, True)
 
-    for u in urldata:
+    for u in urls:
         ud = urldata[u]
         m = ud.method
         if ud.localfile:
@@ -465,6 +472,23 @@ class Fetch(object):
 
     srcrev_internal_helper = staticmethod(srcrev_internal_helper)
 
+    def localcount_internal_helper(ud, d):
+        """
+        Return:
+            a) a locked localcount if specified
+            b) None otherwise
+        """
+
+        localcount= None
+        if 'name' in ud.parm:
+            pn = data.getVar("PN", d, 1)
+            localcount = data.getVar("LOCALCOUNT_" + ud.parm['name'], d, 1)
+        if not localcount:
+            localcount = data.getVar("LOCALCOUNT", d, 1)
+        return localcount
+
+    localcount_internal_helper = staticmethod(localcount_internal_helper)
+
     def try_mirror(d, tarfn):
         """
         Try to use a mirrored version of the sources. We do this
@@ -553,12 +577,7 @@ class Fetch(object):
         """
         
         """
-        has_sortable_valid = hasattr(self, "_sortable_revision_valid")
-        has_sortable = hasattr(self, "_sortable_revision")
-
-        if has_sortable and not has_sortable_valid:
-            return self._sortable_revision(url, ud, d)
-        elif has_sortable and self._sortable_revision_valid(url, ud, d):
+        if hasattr(self, "_sortable_revision"):
             return self._sortable_revision(url, ud, d)
 
         pd = persist_data.PersistData(d)
@@ -566,13 +585,24 @@ class Fetch(object):
 
         latest_rev = self._build_revision(url, ud, d)
         last_rev = pd.getValue("BB_URI_LOCALCOUNT", key + "_rev")
-        count = pd.getValue("BB_URI_LOCALCOUNT", key + "_count")
+        uselocalcount = bb.data.getVar("BB_LOCALCOUNT_OVERRIDE", d, True) or False
+        count = None
+        if uselocalcount:
+            count = Fetch.localcount_internal_helper(ud, d)
+        if count is None:
+            count = pd.getValue("BB_URI_LOCALCOUNT", key + "_count")
 
         if last_rev == latest_rev:
             return str(count + "+" + latest_rev)
 
+        buildindex_provided = hasattr(self, "_sortable_buildindex")
+        if buildindex_provided:
+            count = self._sortable_buildindex(url, ud, d, latest_rev)
+
         if count is None:
             count = "0"
+        elif uselocalcount or buildindex_provided:
+            count = str(count)
         else:
             count = str(int(count) + 1)
 
