@@ -191,7 +191,7 @@ def _filterProviders(providers, item, cfgData, dataCache):
             eligible.append(preferred_versions[pn][1])
 
     # Now add latest verisons
-    for pn in pkg_pn.keys():
+    for pn in sortpkg_pn.keys():
         if pn in preferred_versions and preferred_versions[pn][1]:
             continue
         preferred_versions[pn] = findLatestProvider(pn, cfgData, dataCache, sortpkg_pn[pn][0])
